# isitsecure

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  slack-notify.yml
benchmarks/: .gitignore  README.md  RESULTS.md  run_benchmarks.py  score.py
benchmarks/ground_truth/: __init__.py  juiceshop.py  juiceshop_challenges.json  schema.py
demo/: README.md  banner.tape  scan.tape
docs/: architecture.md  lsp-setup.md  mcp.md
docs/scanners/: README.md  active-injection-scanner.md  auth-bypass-scanner.md  body-param-fuzzer.md  cors-scanner.md  csrf-scanner.md  dependency-scanner.md  docker-scanner.md  dom-xss-scanner.md  drizzle-schema-analyzer.md  express-middleware-analyzer.md  file-upload-scanner.md  firebase-rules-analyzer.md  fix-generator.md  git-secret-scanner.md  graphql-scanner.md  http-probe-scanner.md  iac-scanner.md  idor-scanner.md  java-dependency-scanner.md  jwt-scanner.md  k8s-scanner.md  llm-code-reviewer.md  mass-assignment-scanner.md  middleware-analyzer.md  open-redirect-scanner.md  openapi-scanner.md  password-reset-scanner.md  prisma-schema-analyzer.md  privilege-escalation-scanner.md  python-dependency-scanner.md  race-condition-scanner.md  rate-limit-scanner.md  rls-deep-scanner.md  rls-policy-analyzer.md  route-auth-analyzer.md  security-headers-scanner.md  semantic-rule-verifier.md  session-scanner.md  shell-script-scanner.md  (+2 more)
examples/: github-action.yml  sample-report.html  sample-report.json  sample-results.sarif
isitsecure/: __init__.py  cli.py  config.py  mcp_server.py
isitsecure/engine/: __init__.py  agent.py  constants.py  cross_referencer.py  (+4 more)
test-app/: .env  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
tests/: test_cli_onboarding.py  test_fix_service_remote.py  test_mcp_server.py
ui/: README.md  package.json
(+360 files in other folders)
