[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isitsecure"
version = "0.1.0"
description = "AI-powered security scanner for modern web apps. SAST + DAST + LLM review in one scan."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Kunal Jaura", email = "kunaljaura@gmail.com" },
]
keywords = ["security", "scanner", "sast", "dast", "llm", "ai", "web-security", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "pydantic>=2.13.4,<3.0",
    "httpx>=0.25",
    "typer>=0.12",
    "rich>=13.0",
    "uvicorn>=0.51.0",
    "fastapi>=0.111",
]

[project.optional-dependencies]
# Browser-based DAST (authenticated crawl, DOM XSS)
browser = [
    "playwright>=1.61.0",
]
# OOB blind vulnerability detection
oob = [
    "cryptography>=42.0",
]
# LLM-powered code review, triage, business logic analysis
llm = [
    "anthropic>=0.116.0",
    "google-genai>=1.0",
]
# Everything
all = [
    "isitsecure[browser,oob,llm]",
]
# Development
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
isitsecure = "isitsecure.cli:app"

[project.urls]
Homepage = "https://isitsecure.ai"
Repository = "https://github.com/jaurakunal/isitsecure"
Issues = "https://github.com/jaurakunal/isitsecure/issues"
Documentation = "https://github.com/jaurakunal/isitsecure/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["isitsecure"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["S101"]  # assert in tests is fine
